--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,51 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
 
 /* CSS VARIABLES */
 :root{
@@ -32,6 +79,14 @@ header, main, footer{
     background-color: var(--white);
 }
 
+h1{
+    font-size: 32px;
+    font-weight: bold;
+    display: block;
+    margin-top:21px;
+    margin-bottom: 21px;
+}
+
 /* Shared header and footer styles */
 header, footer{
     text-align: center;
@@ -42,6 +97,7 @@ header, footer{
 nav{
     width: 50%;
     margin: 0 auto;
+    padding-bottom:15px;
 }
 
 nav ul{
@@ -74,7 +130,17 @@ main > section{
 
 /* Styles for the h2 & h3 tags */
 h2, h3{
+    font-weight: bold;
     text-align: center;
+    padding-top:21px;
+    padding-bottom: 10px;
+}
+h2{
+    font-size: 24px;
+}
+
+h3{
+    font-size: 19px;
 }
 
 /* Paragraph Styles */
@@ -140,7 +206,13 @@ fieldset{
     grid-template-columns: 0.25fr 6fr 0.25fr 6fr;
     gap: 1rem;
     margin: 1rem 0;
+    border: 2px solid;
     border-color: var(--red);
+}
+
+fieldset legend{
+    margin-left: 10px;
+    padding-left: 5px;
 }
 
 /* Code for Custom Radios - Compare to Your zyBook, I added additional code to make these match my form styles */
@@ -212,6 +284,15 @@ textarea{
     color: var(--dk-gray);
 }
 
+/* image style */
+#image img{
+    margin-left: 40px;
+    margin-right: 40px;
+}
+
+#image figcaption{
+    margin-left: 40px;
+}
 /* Code Styles */
 code{
     font-family: var(--code-fonts);
